--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,32 @@
   <title>Leaderboard</title>
 </head>
 <body>
-  <h1>Leaderboard</h1>
-  <section class="scores-board">
-    <h2>Recent scores</h2>
-    <button type="button" id="refresh">Refresh</button>
-    <ul class="scores-list">
-      <li class="score">Name: 100</li>
-      <li class="score">Name: 20</li>
-    </ul>
-  </section>
-  <form action="post">
-    <label for="player-name"></label>
-    <input type="text" name="player name" id="player-name" placeholder="Your name">
-    <label for="player-score"></label>
-    <input type="number" name="player score" id="player-score" placeholder="Your score">
-    <button type="submit">Submit</button>
-  </form>
+    <main class="main-section">
+      <h1 class="title">Leaderboard</h1>
+      <div class="container">
+        <section class="scores-board">
+          <div class="score-board-top">
+            <h2>Recent scores</h2>
+            <button type="button" id="refresh">Refresh</button>
+          </div>
+          <ul class="scores-list">
+            <li class="score">Name: 100</li>
+            <li class="score">Name: 20</li>
+            <li class="score">Name: 100</li>
+            <li class="score">Name: 20</li>
+          </ul>
+        </section>
+        <form action="post" class="score-form">
+          <h2 class="form-title">Add your score</h2>
+          <div class="form-input">
+            <label for="player-name"></label>
+            <input type="text" name="player name" id="player-name" placeholder="Your name">
+            <label for="player-score"></label>
+            <input type="number" name="player score" id="player-score" placeholder="Your score">
+            <button type="submit" id="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+  </main>
 </body>
 </html>
