Removed hardcoaded li

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,10 @@
             <h2>Recent scores</h2>
             <button type="button" id="refresh">Refresh</button>
           </div>
-          <ul class="scores-list">
-            <li class="score">Name: 100</li>
-            <li class="score">Name: 20</li>
-            <li class="score">Name: 100</li>
-            <li class="score">Name: 20</li>
+          <ul class="scores-list" id="scores-list">
           </ul>
         </section>
-        <form action="post" class="score-form">
+        <form action="" class="score-form">
           <h2 class="form-title">Add your score</h2>
           <div class="form-input">
             <label for="player-name"></label>
