Add form method and id

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
           <ul class="scores-list" id="scores-list">
           </ul>
         </section>
-        <form action="" class="score-form">
+        <form class="score-form" action="#" method="post">
           <h2 class="form-title">Add your score</h2>
           <div class="form-input">
             <label for="player-name"></label>
-            <input type="text" name="player name" id="player-name" placeholder="Your name">
+            <input type="text" name="playerName" id="playerName" placeholder="Your name">
             <label for="player-score"></label>
-            <input type="number" name="player score" id="player-score" placeholder="Your score">
+            <input type="number" name="playerScore" id="playerScore" placeholder="Your score">
             <button type="submit" id="submit">Submit</button>
           </div>
         </form>
