--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
         <form class="score-form" action="#" method="post">
           <h2 class="form-title">Add your score</h2>
           <div class="form-input">
-            <label for="player-name"></label>
+            <label for="playerName"></label>
             <input type="text" name="playerName" id="playerName" placeholder="Your name">
-            <label for="player-score"></label>
+            <label for="playerScore"></label>
             <input type="number" name="playerScore" id="playerScore" placeholder="Your score">
             <button type="submit" id="submit">Submit</button>
           </div>
