--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
           <h2 class="form-title">Add your score</h2>
           <div class="form-input">
             <label for="playerName"></label>
-            <input type="text" name="playerName" id="playerName" placeholder="Your name">
+            <input type="text" name="playerName" id="playerName" placeholder="Your name" required>
             <label for="playerScore"></label>
-            <input type="number" name="playerScore" id="playerScore" placeholder="Your score">
+            <input type="number" name="playerScore" id="playerScore" placeholder="Your score" min="0" required>
             <button type="submit" id="submit">Submit</button>
           </div>
         </form>
